# doctest-parallel-issue

./: flake.nix  hello.cabal  readme.md
nix/: hix.nix
tests/: DocTestMain.hs
