-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello
version: 1.0.0.2
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: mailto:marlowsd@gmail.com
stability: stable
homepage: http://www.haskell.org/hello/
synopsis: Hello World, an example package
category: Console, Text
cabal-version: >= 2.0
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

library lib-hello
  hs-source-dirs: src
  build-depends:
    base >= 4.2 && < 5,
    doctest-parallel ^>= 0.3.0
          
executable hello
  hs-source-dirs: src
  main-is: hello.hs
  build-depends:
    base >= 4.2 && < 5,
    doctest-parallel ^>= 0.3.0

  if flag(threaded)
     ghc-options: -threaded

test-suite DocTests
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts -fno-warn-orphans

  type:           exitcode-stdio-1.0
  main-is:        DocTestMain.hs

  build-depends:
      base >= 4.2 && < 5
    , doctest-parallel ^>= 0.3.0
    , process
    , array                  >= 0.5   && < 0.6
    , binary                 >= 0.8   && < 0.9
    , bytestring             >= 0.10  && < 0.12
    , containers            ^>= 0.6.0
    , deepseq                >= 1.4   && < 1.5
    , directory              >= 1.3   && < 1.4
    , filepath               >= 1.4   && < 1.5
    , mtl                    >= 2.2.1 && < 2.4
    , pretty                 >= 1.1   && < 1.2
    , process                
    , text                  ^>= 1.2.5.0 || ^>= 2.0
    , time                   >= 1.9   && < 1.13
    , transformers           >= 0.5   && < 0.7
    , unix                   >= 2.7   && < 2.8
    , scientific
    , aeson                 ^>= 2.0.3.0 || ^>= 2.1.0.0
    , Cabal                 ^>= 3.8.1.0
    , Cabal-syntax          ^>= 3.8.1.0

    

     